# QrSmartReader

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/qrsmartreader/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best-sim-opt.param  model_ncnn.param  yolov8_pose_n_fp16.param  yolov8_pose_s_fp16.param
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ncnn-20240410-android-vulkan/armeabi-v7a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/cpp/pose/: yolov8ncnn.cpp  yolov8pose.cpp  yolov8pose.h
app/src/main/cpp/segment/: yolo.cpp  yolo.h  yolov8ncnn.cpp
app/src/main/java/com/example/qrsmartreader/: App.kt  MainActivity.kt  SingleLiveEvent.java  Yolov8Ncnn.kt  Yolov8NcnnInterface.kt  Yolov8NcnnPose.kt
app/src/main/java/com/example/qrsmartreader/di/: AppComponent.kt  DatabaseModule.kt  InteractorsModule.kt  RepositoriesModule.kt  SharedPreferencesModule.kt
app/src/main/java/com/example/qrsmartreader/domain/: AiResult.kt  AiScanInteractor.kt  DataProcess.kt  Utils.java
app/src/main/res/drawable/: ic_settings.xml
app/src/main/res/layout/: activity_main.xml  fragment_camera_detection.xml  fragment_gallery_detection.xml  fragment_result_screen.xml  fragment_settings_screen.xml  item_result.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/qrsmartreader/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
